force-app/main/default/objects/Managed_Services_Revenue_Landing__c/Managed_Services_Revenue_Landing__c.object-meta.xml
<CustomObject>
    <label>Managed Services Revenue Landing</label>
    <nameField>
        <displayFormat>MSRL-{0000}</displayFormat>
        <label>Managed Services Revenue Landing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Revenue Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>