force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Delivered_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Impressions__c</fullName>
    <label>Delivered Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>