force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Impressions_BillableBased__c.field-meta.xml
<CustomField>
    <fullName>Impressions_BillableBased__c</fullName>
    <label>Impressions-BillableBased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>