force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Managed Services Revenue Landings</relationshipLabel>
    <relationshipName>Managed_Services_Revenue_Landings</relationshipName>
    <type>Lookup</type>
</CustomField>