force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Placement_Id__c.field-meta.xml
<CustomField>
    <fullName>Placement_Id__c</fullName>
    <label>Placement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>