force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Raw_Impressions_No_adjustments__c.field-meta.xml
<CustomField>
    <fullName>Raw_Impressions_No_adjustments__c</fullName>
    <label>Raw Impressions (No adjustments)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>