force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Revenue_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Local_Currency__c</fullName>
    <label>Revenue (Local Currency)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>