force-app/main/default/objects/Managed_Services_Revenue_Landing__c/fields/Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_USD__c</fullName>
    <label>Revenue (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>